Redesign the app and add flex sensors service
Redesign the app UI layouts using the guidlines of the Introduction to Android MOOC by Google as a learning experience
Add a flex sensors service with its own layout and source implementation
Change the name of the main layout to a more suggestive filename
Define all string literals to an XML resource in values/strings.xml and reference them from there in source to conform to standards
Define colors in the resource values/colors.xml
Request to enable location settings programmatically to solve the problem of user not knowing it's needed
Request for location permissions programmatically to solve the problem of user not knowing they are required
Use an icon in action bar menuitem instead of text
Update the manifest to inlude all required permissions
Remove all typing errors(typos) in the XML resource files and the java code and rename variables to eliminate warnings
Delete unused image resource files
Add NXP logo and flex sensors image resource files

--- a/BLEToolBox/app/src/main/AndroidManifest.xml
+++ b/BLEToolBox/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="co.karibe.BLEToolBox.Display" android:parentActivityName="co.karibe.BLEToolBox.MainActivity">
+        <activity android:name="co.karibe.BLEToolBox.Display"
+            android:parentActivityName="co.karibe.BLEToolBox.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.karibe.BLEToolBox.MainActivity" />
